# qtile

./: README.md
.config/: .gitignore
.config/kitty/: kitty.conf
.config/picom/: picom.conf
.config/powerline/: bash_init.sh
.config/powerline/colorschemes/shell/: default.json
.config/powerline/themes/shell/: default.json
.config/qtile/: autostart.sh  config.py  themes.py
.config/ranger/: rc.conf  rifle.conf
.local/: .gitignore
.local/qtile/: pyproject.toml  qtile-venv-entry.sh
