[project]
name = "qtile-env"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairocffi>=1.7.1",
    "dbus-fast>=4.0.0",
    "dbus-next>=0.2.3",
    "dotenv>=0.9.9",
    "iwlib>=1.7.0",
    "logging-tree>=1.10",
    "mypy>=1.19.1",
    "powerline-gitstatus>=1.3.3",
    "powerline-status>=2.7",
    "pywayland>=0.4.18",
    "qtile>=0.33.0",
    "qtile-extras>=0.33.0",
    "xcffib>=1.12.0",
    "xkbcommon>=1.5.1",
]
